# sq

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  clang-tidy.cmake  coverage_flags.cmake  cpp_standard.cmake  optimization_flags.cmake  options.cmake  sanitizer_flags.cmake  warning_flags.cmake
src/: CMakeLists.txt  main.cpp  test.cpp
src/ast/: CMakeLists.txt
src/ast/include/ast/: FilterSpec.h  ListFilterSpec.h  ParseError.h  ast.h
src/ast/src/: FilterSpec.cpp  ListFilterSpec.cpp  ParseError.cpp  ast.cpp
src/ast/test/: CMakeLists.txt  test_ast.cpp
src/ast/test/include/test/: test_ast.h
src/common_types/: CMakeLists.txt
src/common_types/include/common_types/: ArgumentMissingError.h  ArgumentTypeError.h  Exception.h  Field.h  FieldCallParams.h  FieldCallParams.inl.h  InternalError.h  InvalidConversionError.h  InvalidFieldError.h  LexError.h  NotAScalarError.h  NotAnArrayError.h  NotImplementedError.h  OutOfRangeError.h  ParseError.h  Primitive.fwd.h  Primitive.h  Primitive.inl.h  PullupWithSiblingsError.h  SqArgumentMissingError.h  SqArgumentTypeError.h  SqArgumentTypeError.inl.h  SqException.h  SqOutOfRangeError.h  Token.fwd.h  Token.h  errors.h
src/common_types/src/: ArgumentMissingError.cpp  ArgumentTypeError.cpp  Exception.cpp  Field.cpp  FieldCallParams.cpp  InternalError.cpp  InvalidConversionError.cpp  InvalidFieldError.cpp  LexError.cpp  NotAScalarError.cpp  NotAnArrayError.cpp  NotImplementedError.cpp  OutOfRangeError.cpp  ParseError.cpp  Primitive.cpp  PullupWithSiblingsError.cpp  SqArgumentMissingError.cpp  SqArgumentTypeError.cpp  SqException.cpp  SqOutOfRangeError.cpp  Token.cpp  errors.cpp
src/common_types/test/: CMakeLists.txt  FieldCallParams_test_util.cpp  Primitive_test_util.cpp  test_common_types.cpp
src/core/: CMakeLists.txt
src/core/include/core/: ASSERT.h  Field.h  FieldCallParams.h  FieldCallParams.inl.h  MoveOnlyTree.h  Primitive.fwd.h  Primitive.h  Primitive.inl.h  SharedRange.h  Token.fwd.h  Token.h  errors.h  errors.inl.h  narrow.h  narrow.inl.h  strutil.h  typeutil.h  typeutil.inl.h
src/core/src/: ASSERT.cpp  Field.cpp  FieldCallParams.cpp  MoveOnlyTree.cpp  Primitive.cpp  SharedRange.cpp  Token.cpp  errors.cpp  narrow.cpp  strutil.cpp  typeutil.cpp
src/core/test/: CMakeLists.txt  Primitive_test_util.cpp  test_core.cpp
src/exceptions/: CMakeLists.txt
src/exceptions/include/exceptions/: NotImplementedError.h  SqException.h
src/exceptions/src/: NotImplementedError.cpp  SqException.cpp
src/parser/: CMakeLists.txt  Sq.g4
src/parser/include/parser/: Ast.h  FilterSpec.h  Parser.h  Parser.inl.h  TokenView.h
src/parser/src/: Ast.cpp  FilterSpec.cpp  Parser.cpp  TokenView.cpp
src/parser/test/: CMakeLists.txt  test_parser.cpp
src/results/: CMakeLists.txt
src/results/include/results/: Filter.h  ResultView.h  Serializer.h  results.h
src/results/src/: Filter.cpp  ResultView.cpp  Serializer.cpp  results.cpp
src/results/test/: CMakeLists.txt  results_test_util.cpp  results_test_util.h  test_Serializer.cpp  test_results.cpp
src/schema/: CMakeLists.txt  generate_schema.py  schema.json
src/schema/include/field_types/: Field.h  FieldCallParams.h  FieldCallParams.inl.h  InvalidFieldError.h  Primitive.h  SqBoolImpl.h  SqDataSizeImpl.h  SqFloatImpl.h  SqIntImpl.h  SqPathImpl.h  SqRootImpl.h  SqStringImpl.h
src/schema/src/: SqFloat_getters.cpp  SqInt_getters.cpp  SqRoot_getters.cpp  SqString_getters.cpp
src/schema/src/field_types/: Field.cpp  FieldCallParams.cpp  InvalidFieldError.cpp  Primitive.cpp  SqBoolImpl.cpp  SqBool_getters.cpp  SqDataSizeImpl.cpp  SqDataSize_getters.cpp  SqFloatImpl.cpp  SqIntImpl.cpp  SqInt_getters.cpp  SqPathImpl.cpp  SqPath_getters.cpp  SqRootImpl.cpp  SqRoot_getters.cpp  SqStringImpl.cpp  SqString_getters.cpp
src/schema/templates/: SqType.gen.cpp.jinja  SqType.gen.h.jinja  SqType.gen.inl.h.jinja
src/serialization/: CMakeLists.txt
src/serialization/include/serialization/: serialize.h
src/serialization/src/: serialize.cpp
src/serialization/test/: CMakeLists.txt  test_serialization.cpp
src/system/: CMakeLists.txt  generate_system_dispatch.py  generate_system_files.lua  generate_system_files.py  schema.json  sq_functions.cmake  sq_system_dispatch.cmake  sq_system_linux.cmake  sq_system_schema.cmake  sq_system_standard.cmake
src/system/include/system/: CacheingField.h  SqBool.gen.h  SqDataSize.gen.h  SqFloat.gen.h  SqInt.gen.h  SqPath.gen.h  SqRoot.gen.h  SqString.gen.h  root.h  schema.h
src/system/scripts/: generate_file.lua  generate_file_for_each_type.lua  sq_schema_util.lua
src/system/src/: CacheingField.cpp  root.cpp
src/system/src/linux/: SqAnyPrimitiveImpl.cpp  SqBoolImpl.cpp  SqDataSizeImpl.cpp  SqDeviceImpl.cpp  SqFieldSchemaImpl.cpp  SqFileImpl.cpp  SqFileModeImpl.cpp  SqFloatImpl.cpp  SqGroupImpl.cpp  SqIntImpl.cpp  SqParamSchemaImpl.cpp  SqPathImpl.cpp  SqPrimitiveTypeSchemaImpl.cpp  SqRootImpl.cpp  SqSchemaImpl.cpp  SqStringImpl.cpp  SqTimePointImpl.cpp  SqTypeSchemaImpl.cpp  SqUserImpl.cpp  udev.cpp
src/system/src/standard/: SqBoolImpl.cpp  SqDataSizeImpl.cpp  SqFieldSchemaImpl.cpp  SqFloatImpl.cpp  SqIntImpl.cpp  SqParamSchemaImpl.cpp  SqPathImpl.cpp  SqPrimitiveTypeSchemaImpl.cpp  SqRootImpl.cpp  SqSchemaImpl.cpp  SqStringImpl.cpp  SqTypeSchemaImpl.cpp
src/system/templates/: SqType.gen.cpp.jinja  SqType.gen.cpp.template  SqType.gen.h.jinja  SqType.gen.h.template  SqType.gen.inl.h.jinja  SqType.gen.inl.h.template  schema.gen.cpp.template
src/system/test/: CMakeLists.txt  test_system.cpp
src/util/: CMakeLists.txt
src/util/include/util/: ASSERT.h  MoveOnlyTree.h  SharedRange.h  SharedRange.inl.h  Tree.h  strutil.h  typeutil.h  typeutil.inl.h
src/util/src/: ASSERT.cpp  MoveOnlyTree.cpp  SharedRange.cpp  Tree.cpp  strutil.cpp  typeutil.cpp
src/util/test/: CMakeLists.txt  test_util.cpp
test/: CMakeLists.txt  conftest.py  test_sq_data_size.py  test_sq_file.py  test_sq_file_mode.py  test_sq_group.py  test_sq_path.py  test_sq_root.py  test_sq_schema.py  test_sq_user.py
test/util/: __init__.py
(+53 files in other folders)
